# filemanager

./: LICENSE  README.md  meson.build
c_utils/: human_size.c  human_size.h  human_size.vapi
core/: core_tests.cpp  file_core.cpp  file_core.vapi
filemanager/: README.md  meson.build  run
filemanager/c_utils/: human_size.c
filemanager/core/: file_core.cpp  file_core.h
filemanager/src/: main.vala
src/: main.vala
